@@ -4,6 +4,7 @@ Stable versions
 4.3.2 ():
 	Fix bugs caught in the OpenMPT test cases:
 	- fix XM portamento target reset on new instrument
+	- fix XM portamento with offset
 	- fix XM tremolo and vibrato waveforms
 	- fix tremolo rate
 	Other changes:
